--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary-outline" data-bs-dismiss="modal">الغاء</button>
-        <button type="button" class="btn btn-primary">تأكيد</button>
+        <a href="index.html" class="btn btn-primary">تأكيد</a>
       </div>
     </div>
   </div>
