--- a/ads.html
+++ b/ads.html
@@ -19,72 +19,112 @@
   </head>
   <body class="inner">
     <header class="p-5">
-        <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3">
-            <a class="sitelogo" href="index.html"><img src="img/logo.svg" alt=""></a>
-            <nav class="navbar navbar-expand-lg flex-fill ps-3">
-                <div class="container-fluid">
-                    <span data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler-icon navbar-toggler"></span>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">العقارات</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">الاعلانات</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">الخدمات</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            المسوقين
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">الشركات</a></li>
-                          <li><a class="dropdown-item" href="#">الافراد</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">الأسئلة الشائعة</a>
-                      </li>
-                    </ul>
-                  </div>
+      <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3">
+          <a class="sitelogo" href="index.html"><img src="img/logo.svg" alt=""></a>
+          <nav class="navbar navbar-expand-lg flex-fill ps-3">
+              <div class="container-fluid">
+                  <span data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler-icon navbar-toggler"></span>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">العقارات</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">الاعلانات</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">الخدمات</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          المسوقين
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">الشركات</a></li>
+                        <li><a class="dropdown-item" href="#">الافراد</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">الأسئلة الشائعة</a>
+                    </li>
+                  </ul>
                 </div>
-            </nav>
-            <ul class="d-flex justify-content-between align-items-center head-links m-0">
-                <li class="me-3"><a href="login"><i class="fal fa-user me-1"></i><span>تسجيل الدخول</span> </a></li>
-                <li><a href="login"><span>English</span> <i class="fal fa-globe ms-1"></i></a></li>
+              </div>
+          </nav>
+          <ul class="d-flex justify-content-between align-items-center head-links m-0">
+              <li class="me-3"><a href="login"><i class="fal fa-user me-1"></i><span>تسجيل الدخول</span> </a></li>
+              <li><a href="login"><span>English</span> <i class="fal fa-globe ms-1"></i></a></li>
+          </ul>
+      </div>
+
+      <div class="container px-0 mt-2 d-flex justify-content-between align-items-center">
+        <div>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb  mb-0">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Library</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Data</li>
+            </ol>
+          </nav>
+          <h1 class="pagetitle">
+            عنوان الصفحة
+          </h1>
+        </div>
+        <div class="share d-flex justify-content-end align-items-center">
+      
+          <div class="dropdown">
+            <a class="p-2 me-2" href="#"  data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-share-square"></i></a>
+            <ul class="dropdown-menu p-0 shaer_menu">
+              <li>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                  <i class="fas fa-copy me-2"></i>
+                  <p class="mb-0">نسخ الرابط</p>
+                </a>
+              </li>
+              <hr class="m-0">
+              <li>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                  <img class="me-2" src="img/facebook.svg" alt="">
+                  <p class="mb-0">مشاركة عبر فيسبوك</p>
+                </a>
+              </li>
+              <hr class="m-0">
+              <li>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                  <img class="me-2" src="img/twitter.svg" alt="">
+                  <p class="mb-0">مشاركة عبر تويتر</p>
+                </a>
+              </li>
+              <hr class="m-0">
+              <li>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                  <img class="me-2" src="img/google.svg" alt="">
+                  <p class="mb-0">مشاركة عبر قوقل</p>
+                </a>
+              </li>
+              <hr class="m-0">
+              <li>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                  <img class="me-2" src="img/whatsapp-icon.svg" alt="">
+                  <p class="mb-0">مشاركة عبر واتساب</p>
+                </a>
+              </li>
             </ul>
         </div>
 
-        <div class="container px-0 mt-2 d-flex justify-content-between align-items-center">
-          <div>
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb  mb-0">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Library</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Data</li>
-              </ol>
-            </nav>
-            <h1 class="pagetitle">
-              عنوان الصفحة
-            </h1>
-          </div>
-          <div class="share d-flex justify-content-end align-items-center">
-            <a class="p-2 me-2" href="#"><i class="fas fa-share-square"></i></a>
-            <a class="p-2" href="#"><i class="fas fa-print"></i></a>          
-          </div>
-
+          <a class="p-2" href="#"><i class="fas fa-print"></i></a>          
         </div>
 
-    </header>
+      </div>
+
+  </header>
 
     <div class="container px-0">
         <div class="content my-5">
-            <div class="fillters d-flex align-items-center justify-content-start p-3">
+            <div class="fillters d-flex align-items-center justify-content-start p-3 flex-wrap">
               <div class="fillter-input pe-5 px-3">
                 <label for="" class="form-label">نوع التصنيف</label>
                 <select class="form-select form-control ps-0" aria-label="Default select ">
@@ -142,7 +182,7 @@
 
             </div>
             <div class="row">
-              <div class="right_content col-md-8 py-3">
+              <div class="right_content col-lg-8 col-md-12 py-3">
                 <div class="count d-flex justify-content-between align-items-center p-2">
                   <p class="m-0">عدد العقارات <span>293</span></p>
                   <div class="sort d-flex justify-content-end">
@@ -160,7 +200,7 @@
 
                 </div>
                 <div class="ad-box mt-3 p-2 mb-4">
-                  <div class="d-flex">
+                  <div class="align-items-center d-flex flex-wrap justify-content-start">
                     <div class="image position-relative me-3">
                       <img src="img/img.png" alt="">
                       <div class="info p-2 bottom-0 info p-2 position-absolute w-100">
@@ -201,7 +241,7 @@
                         <h3>شقة للايجار</h3>
                         <div class="dropdown">
                             <i class="fas fa-share ms-2" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu p-0">
+                            <ul class="dropdown-menu shaer_menu p-0">
                               <li>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                   <i class="fas fa-copy me-2"></i>
@@ -263,7 +303,7 @@
                 </div>
 
                 <div class="ad-box mt-3 p-2 mb-4">
-                  <div class="d-flex">
+                  <div class="align-items-center d-flex flex-wrap justify-content-start">
                     <div class="image position-relative me-3">
                       <img src="img/img.png" alt="">
                       <div class="info p-2 bottom-0 info p-2 position-absolute w-100">
@@ -304,7 +344,7 @@
                         <h3>شقة للايجار</h3>
                         <div class="dropdown">
                             <i class="fas fa-share ms-2" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu p-0">
+                            <ul class="dropdown-menu p-0 shaer_menu">
                               <li>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                   <i class="fas fa-copy me-2"></i>
@@ -366,7 +406,7 @@
                 </div>
 
                 <div class="ad-box mt-3 p-2 mb-4">
-                  <div class="d-flex">
+                  <div class="align-items-center d-flex flex-wrap justify-content-start">
                     <div class="image position-relative me-3">
                       <img src="img/img.png" alt="">
                       <div class="info p-2 bottom-0 info p-2 position-absolute w-100">
@@ -407,7 +447,7 @@
                         <h3>شقة للايجار</h3>
                         <div class="dropdown">
                             <i class="fas fa-share ms-2" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu p-0">
+                            <ul class="dropdown-menu p-0 shaer_menu">
                               <li>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                   <i class="fas fa-copy me-2"></i>
@@ -469,7 +509,7 @@
                 </div>
 
                 <div class="ad-box mt-3 p-2 mb-4">
-                  <div class="d-flex">
+                  <div class="align-items-center d-flex flex-wrap justify-content-start">
                     <div class="image position-relative me-3">
                       <img src="img/img.png" alt="">
                       <div class="info p-2 bottom-0 info p-2 position-absolute w-100">
@@ -510,7 +550,7 @@
                         <h3>شقة للايجار</h3>
                         <div class="dropdown">
                             <i class="fas fa-share ms-2" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                            <ul class="dropdown-menu p-0">
+                            <ul class="dropdown-menu p-0 shaer_menu">
                               <li>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                   <i class="fas fa-copy me-2"></i>
@@ -588,7 +628,7 @@
                   </ul>
                 </nav>
               </div>
-              <div class="sidebar col-md-4 py-3">
+              <div class="sidebar col-lg-4 col-md-12 py-3">
                 <div class="map">
                   <h4 class="sidetitle">بحث بالخريطة</h4>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44440.980467724694!2d46.64836388076163!3d24.643831203186632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f059757836809%3A0x4a546d62d5032783!2sRiyadh%20Zoo!5e0!3m2!1sen!2ssa!4v1734356804649!5m2!1sen!2ssa" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
