--- a/contact.html
+++ b/contact.html
@@ -19,46 +19,47 @@
   </head>
   <body class="inner">
     <header class="p-5">
-      <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3">
-          <a class="sitelogo" href="index.html"><img src="img/logo.svg" alt=""></a>
-          <nav class="navbar navbar-expand-lg flex-fill ps-3">
-              <div class="container-fluid">
-                  <span data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler-icon navbar-toggler"></span>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">العقارات</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">الاعلانات</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">الخدمات</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          المسوقين
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">الشركات</a></li>
-                        <li><a class="dropdown-item" href="#">الافراد</a></li>
-                      </ul>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">الأسئلة الشائعة</a>
-                    </li>
-                  </ul>
-                </div>
+      <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3 flex-lg-nowrap flex-wrap">
+        <a class="sitelogo" href="index.html"><img src="img/logo.svg" alt=""></a>
+        <nav class="navbar navbar-expand-lg flex-fill ps-3">
+            <div class="container-fluid">
+                <span data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler-icon navbar-toggler"></span>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">العقارات</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">الاعلانات</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">الخدمات</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        المسوقين
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">الشركات</a></li>
+                      <li><a class="dropdown-item" href="#">الافراد</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">الأسئلة الشائعة</a>
+                  </li>
+                </ul>
               </div>
-          </nav>
-          <ul class="d-flex justify-content-between align-items-center head-links m-0">
-              <li class="me-3"><a href="login"><i class="fal fa-user me-1"></i><span>تسجيل الدخول</span> </a></li>
-              <li><a href="login"><span>English</span> <i class="fal fa-globe ms-1"></i></a></li>
-          </ul>
-      </div>
+            </div>
+        </nav>
+        <ul class="d-flex justify-content-between align-items-center head-links m-0">
+            <li class="me-3"><a href="login.html"><i class="fal fa-user me-1"></i><span>تسجيل الدخول</span> </a></li>
+            <li><a href="#"><span>English</span> <i class="fal fa-globe ms-1"></i></a></li>
+        </ul>
+    </div>
+  
 
       <div class="container px-0 mt-2 d-flex justify-content-between align-items-center">
         <div>
