--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="p-5">
-        <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3">
+        <div  id="navbar_top" class="container header d-flex justify-content-between align-items-center py-3 px-3 flex-lg-nowrap flex-wrap">
             <a class="sitelogo" href="index.html"><img src="img/logo.svg" alt=""></a>
             <nav class="navbar navbar-expand-lg flex-fill ps-3">
                 <div class="container-fluid">
@@ -93,7 +93,7 @@
               </div>
         </div>
         <div class="container mt-5 px-0">
-            <div class="searchForm d-flex justify-content-start align-items-center p-2 ps-3">
+            <div class="searchForm d-flex justify-content-start align-items-center p-2 ps-3 flex-lg-nowrap flex-wrap">
                 <div class="select pe-3  flex-fill">
                     <label class="form-label m-0">نوع التصنيف</label>
                     <select class="form-select ps-0">
@@ -141,16 +141,16 @@
                 <h2>عن المنصة </h2>
                 <p>الهيئة العامة للعقار" تصدر "ضوابط الإعلانات العقارية" ومعايير ترخيص المنصات العقارية الإلكترونية وتصنيفها الهيئة العامة للعقار" تصدر "ضوابط الإعلانات العقارية" ومعايير ترخيص المنصات العقارية الإلكترونية وتصنيفها</p>
                 <div class="status">
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                        <div class="status-div d-flex justify-content-between align-items-center flex-fill">
-                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill me-2">
+                    <div class="d-flex justify-content-between align-items-center mb-3 flex-lg-nowrap flex-wrap">
+                        <div class="status-div d-flex justify-content-between align-items-center flex-fill flex-lg-nowrap flex-wrap">
+                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill me-2 flex-lg-nowrap flex-wrap">
                                 <div class="">
                                     <p class="m-2">650</p>
                                     <h6>وحدة عقارية</h6>
                                 </div>
                                 <i class="fal fa-home"></i>
                             </div>
-                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill ms-2">
+                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill ms-2 flex-lg-nowrap flex-wrap">
                                 <div class="">
                                     <p class="m-2">298</p>
                                     <h6>عقود التأجير</h6>
@@ -159,9 +159,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="status-div d-flex justify-content-between align-items-center flex-fill">
-                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill me-2">
+                    <div class="d-flex justify-content-between align-items-center flex-lg-nowrap flex-wrap">
+                        <div class="status-div d-flex justify-content-between align-items-center flex-fill flex-lg-nowrap flex-wrap">
+                            <div class="number p-3 d-flex justify-content-between align-items-center flex-fill me-2 flex-lg-nowrap flex-wrap">
                                 <div class="">
                                     <p class="m-2">650</p>
                                     <h6>وحدة عقارية</h6>
