--- a/Broker_page.html
+++ b/Broker_page.html
@@ -644,7 +644,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="d-flex align-items-center justify-content-between mt-3">
+            <div class="d-flex align-items-center justify-content-between flex-wrap copyrights mt-3">
                 <p>2024 © جميع الحقوق محفوظة لـ أجرلي</p>
                 <ul class="p-0 m-0 social">
                     <li class="mx-2">
