--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </header>
 
-    <div class="container px-0 py-5">
+    <div class="container about-portal px-0 py-5">
         <div class="about d-flex justify-content-between align-items-top">
             <img src="img/about-img.jpg" alt="">
             <div class="about-text">
@@ -730,7 +730,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="d-flex align-items-center justify-content-between mt-3">
+            <div class="d-flex align-items-center justify-content-between flex-wrap copyrights mt-3">
                 <p>2024 © جميع الحقوق محفوظة لـ أجرلي</p>
                 <ul class="p-0 m-0 social">
                     <li class="mx-2">
