--- a/index.html
+++ b/index.html
@@ -728,6 +728,10 @@
                             <img src="img/fal.png" alt="">
                         </li>
                     </ul>
+                    <div class="d-flex justify-content-center align-items-center logos">
+                        <a href=""><img class="mx-2" src="img/marroff_logo.png" alt="معروف" title="معروف"></a>
+                        <a href=""><img class="mx-2" src="img/h_logo.png" alt="الهيئة السعودية للملكية الفكرية" title="الهيئة السعودية للملكية الفكرية"></a>
+                    </div>
                 </div>
             </div>
             <div class="d-flex align-items-center justify-content-between flex-wrap copyrights mt-3">
